@@ -20,7 +20,11 @@
 	</para>
       </listitem>
       <listitem>
-	<para>to be <emphasis>free</emphasis></para>
+	<para><emphasis>to be free</emphasis></para>
+      </listitem>
+      <listitem>
+	<para>to be compliant as much as possible with X/Open CAE 
+	  specifications</para>
       </listitem>
     </itemizedlist>
   </para>
